parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s
Rule 1     s -> segment
Rule 2     s -> segment s
Rule 3     segment -> segment conditional
Rule 4     segment -> statement
Rule 5     statement -> BOOLEAN NAME is_assign
Rule 6     statement -> STRING NAME is_assign
Rule 7     statement -> INTDEC NAME is_assign
Rule 8     statement -> FLOATDEC NAME is_assign
Rule 9     is_assign -> = expression
Rule 10    is_assign -> <empty>
Rule 11    statement -> PRINT ( expression )
Rule 12    statement -> NAME = expression
Rule 13    expression -> expression + expression
Rule 14    expression -> expression - expression
Rule 15    expression -> expression * expression
Rule 16    expression -> expression / expression
Rule 17    expression -> expression ^ expression
Rule 18    expression -> expression LT expression
Rule 19    expression -> expression GT expression
Rule 20    expression -> expression EQUAL expression
Rule 21    expression -> expression NOTEQUAL expression
Rule 22    expression -> expression GOEQUAL expression
Rule 23    expression -> expression LOEQUAL expression
Rule 24    expression -> expression AND expression
Rule 25    expression -> expression OR expression
Rule 26    logic_expression -> expression LT expression
Rule 27    logic_expression -> expression GT expression
Rule 28    logic_expression -> expression EQUAL expression
Rule 29    logic_expression -> expression NOTEQUAL expression
Rule 30    logic_expression -> expression GOEQUAL expression
Rule 31    logic_expression -> expression LOEQUAL expression
Rule 32    logic_expression -> expression AND expression
Rule 33    logic_expression -> expression OR expression
Rule 34    expression -> - expression
Rule 35    expression -> ( expression )
Rule 36    expression -> INUMBER
Rule 37    expression -> FNUMBER
Rule 38    expression -> BOOLEAN
Rule 39    expression -> STRING
Rule 40    expression -> NAME
Rule 41    conditional -> IF ( logic_expression ) { s } elif else
Rule 42    elif -> ELIF ( logic_expression ) { s } else
Rule 43    elif -> <empty>
Rule 44    else -> ELSE { s }
Rule 45    else -> <empty>

Terminals, with rules where they appear

(                    : 11 35 41 42
)                    : 11 35 41 42
*                    : 15
+                    : 13
-                    : 14 34
/                    : 16
=                    : 9 12
AND                  : 24 32
BOOLEAN              : 5 38
ELIF                 : 42
ELSE                 : 44
EQUAL                : 20 28
FLOATDEC             : 8
FNUMBER              : 37
GOEQUAL              : 22 30
GT                   : 19 27
IF                   : 41
INTDEC               : 7
INUMBER              : 36
LOEQUAL              : 23 31
LT                   : 18 26
NAME                 : 5 6 7 8 12 40
NOTEQUAL             : 21 29
OR                   : 25 33
PRINT                : 11
STRING               : 6 39
^                    : 17
error                : 
{                    : 41 42 44
}                    : 41 42 44

Nonterminals, with rules where they appear

conditional          : 3
elif                 : 41
else                 : 41 42
expression           : 9 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35
is_assign            : 5 6 7 8
logic_expression     : 41 42
s                    : 2 41 42 44 0
segment              : 1 2 3
statement            : 4

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . segment
    (2) s -> . segment s
    (3) segment -> . segment conditional
    (4) segment -> . statement
    (5) statement -> . BOOLEAN NAME is_assign
    (6) statement -> . STRING NAME is_assign
    (7) statement -> . INTDEC NAME is_assign
    (8) statement -> . FLOATDEC NAME is_assign
    (11) statement -> . PRINT ( expression )
    (12) statement -> . NAME = expression

    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 6
    INTDEC          shift and go to state 7
    FLOATDEC        shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 5

    s                              shift and go to state 1
    segment                        shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> s .



state 2

    (1) s -> segment .
    (2) s -> segment . s
    (3) segment -> segment . conditional
    (1) s -> . segment
    (2) s -> . segment s
    (41) conditional -> . IF ( logic_expression ) { s } elif else
    (3) segment -> . segment conditional
    (4) segment -> . statement
    (5) statement -> . BOOLEAN NAME is_assign
    (6) statement -> . STRING NAME is_assign
    (7) statement -> . INTDEC NAME is_assign
    (8) statement -> . FLOATDEC NAME is_assign
    (11) statement -> . PRINT ( expression )
    (12) statement -> . NAME = expression

    $end            reduce using rule 1 (s -> segment .)
    }               reduce using rule 1 (s -> segment .)
    IF              shift and go to state 12
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 6
    INTDEC          shift and go to state 7
    FLOATDEC        shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 5

    segment                        shift and go to state 2
    s                              shift and go to state 10
    conditional                    shift and go to state 11
    statement                      shift and go to state 3

state 3

    (4) segment -> statement .

    IF              reduce using rule 4 (segment -> statement .)
    BOOLEAN         reduce using rule 4 (segment -> statement .)
    STRING          reduce using rule 4 (segment -> statement .)
    INTDEC          reduce using rule 4 (segment -> statement .)
    FLOATDEC        reduce using rule 4 (segment -> statement .)
    PRINT           reduce using rule 4 (segment -> statement .)
    NAME            reduce using rule 4 (segment -> statement .)
    $end            reduce using rule 4 (segment -> statement .)
    }               reduce using rule 4 (segment -> statement .)


state 4

    (5) statement -> BOOLEAN . NAME is_assign

    NAME            shift and go to state 13


state 5

    (12) statement -> NAME . = expression

    =               shift and go to state 14


state 6

    (6) statement -> STRING . NAME is_assign

    NAME            shift and go to state 15


state 7

    (7) statement -> INTDEC . NAME is_assign

    NAME            shift and go to state 16


state 8

    (8) statement -> FLOATDEC . NAME is_assign

    NAME            shift and go to state 17


state 9

    (11) statement -> PRINT . ( expression )

    (               shift and go to state 18


state 10

    (2) s -> segment s .

    $end            reduce using rule 2 (s -> segment s .)
    }               reduce using rule 2 (s -> segment s .)


state 11

    (3) segment -> segment conditional .

    IF              reduce using rule 3 (segment -> segment conditional .)
    BOOLEAN         reduce using rule 3 (segment -> segment conditional .)
    STRING          reduce using rule 3 (segment -> segment conditional .)
    INTDEC          reduce using rule 3 (segment -> segment conditional .)
    FLOATDEC        reduce using rule 3 (segment -> segment conditional .)
    PRINT           reduce using rule 3 (segment -> segment conditional .)
    NAME            reduce using rule 3 (segment -> segment conditional .)
    $end            reduce using rule 3 (segment -> segment conditional .)
    }               reduce using rule 3 (segment -> segment conditional .)


state 12

    (41) conditional -> IF . ( logic_expression ) { s } elif else

    (               shift and go to state 19


state 13

    (5) statement -> BOOLEAN NAME . is_assign
    (9) is_assign -> . = expression
    (10) is_assign -> .

    =               shift and go to state 21
    IF              reduce using rule 10 (is_assign -> .)
    BOOLEAN         reduce using rule 10 (is_assign -> .)
    STRING          reduce using rule 10 (is_assign -> .)
    INTDEC          reduce using rule 10 (is_assign -> .)
    FLOATDEC        reduce using rule 10 (is_assign -> .)
    PRINT           reduce using rule 10 (is_assign -> .)
    NAME            reduce using rule 10 (is_assign -> .)
    $end            reduce using rule 10 (is_assign -> .)
    }               reduce using rule 10 (is_assign -> .)

    is_assign                      shift and go to state 20

state 14

    (12) statement -> NAME = . expression
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    expression                     shift and go to state 23

state 15

    (6) statement -> STRING NAME . is_assign
    (9) is_assign -> . = expression
    (10) is_assign -> .

    =               shift and go to state 21
    IF              reduce using rule 10 (is_assign -> .)
    BOOLEAN         reduce using rule 10 (is_assign -> .)
    STRING          reduce using rule 10 (is_assign -> .)
    INTDEC          reduce using rule 10 (is_assign -> .)
    FLOATDEC        reduce using rule 10 (is_assign -> .)
    PRINT           reduce using rule 10 (is_assign -> .)
    NAME            reduce using rule 10 (is_assign -> .)
    $end            reduce using rule 10 (is_assign -> .)
    }               reduce using rule 10 (is_assign -> .)

    is_assign                      shift and go to state 30

state 16

    (7) statement -> INTDEC NAME . is_assign
    (9) is_assign -> . = expression
    (10) is_assign -> .

    =               shift and go to state 21
    IF              reduce using rule 10 (is_assign -> .)
    BOOLEAN         reduce using rule 10 (is_assign -> .)
    STRING          reduce using rule 10 (is_assign -> .)
    INTDEC          reduce using rule 10 (is_assign -> .)
    FLOATDEC        reduce using rule 10 (is_assign -> .)
    PRINT           reduce using rule 10 (is_assign -> .)
    NAME            reduce using rule 10 (is_assign -> .)
    $end            reduce using rule 10 (is_assign -> .)
    }               reduce using rule 10 (is_assign -> .)

    is_assign                      shift and go to state 31

state 17

    (8) statement -> FLOATDEC NAME . is_assign
    (9) is_assign -> . = expression
    (10) is_assign -> .

    =               shift and go to state 21
    IF              reduce using rule 10 (is_assign -> .)
    BOOLEAN         reduce using rule 10 (is_assign -> .)
    STRING          reduce using rule 10 (is_assign -> .)
    INTDEC          reduce using rule 10 (is_assign -> .)
    FLOATDEC        reduce using rule 10 (is_assign -> .)
    PRINT           reduce using rule 10 (is_assign -> .)
    NAME            reduce using rule 10 (is_assign -> .)
    $end            reduce using rule 10 (is_assign -> .)
    }               reduce using rule 10 (is_assign -> .)

    is_assign                      shift and go to state 32

state 18

    (11) statement -> PRINT ( . expression )
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    expression                     shift and go to state 33

state 19

    (41) conditional -> IF ( . logic_expression ) { s } elif else
    (26) logic_expression -> . expression LT expression
    (27) logic_expression -> . expression GT expression
    (28) logic_expression -> . expression EQUAL expression
    (29) logic_expression -> . expression NOTEQUAL expression
    (30) logic_expression -> . expression GOEQUAL expression
    (31) logic_expression -> . expression LOEQUAL expression
    (32) logic_expression -> . expression AND expression
    (33) logic_expression -> . expression OR expression
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    logic_expression               shift and go to state 34
    expression                     shift and go to state 35

state 20

    (5) statement -> BOOLEAN NAME is_assign .

    IF              reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    BOOLEAN         reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    STRING          reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    INTDEC          reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    FLOATDEC        reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    PRINT           reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    NAME            reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    $end            reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)
    }               reduce using rule 5 (statement -> BOOLEAN NAME is_assign .)


state 21

    (9) is_assign -> = . expression
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    expression                     shift and go to state 36

state 22

    (40) expression -> NAME .

    +               reduce using rule 40 (expression -> NAME .)
    -               reduce using rule 40 (expression -> NAME .)
    *               reduce using rule 40 (expression -> NAME .)
    /               reduce using rule 40 (expression -> NAME .)
    ^               reduce using rule 40 (expression -> NAME .)
    LT              reduce using rule 40 (expression -> NAME .)
    GT              reduce using rule 40 (expression -> NAME .)
    EQUAL           reduce using rule 40 (expression -> NAME .)
    NOTEQUAL        reduce using rule 40 (expression -> NAME .)
    GOEQUAL         reduce using rule 40 (expression -> NAME .)
    LOEQUAL         reduce using rule 40 (expression -> NAME .)
    AND             reduce using rule 40 (expression -> NAME .)
    OR              reduce using rule 40 (expression -> NAME .)
    IF              reduce using rule 40 (expression -> NAME .)
    BOOLEAN         reduce using rule 40 (expression -> NAME .)
    STRING          reduce using rule 40 (expression -> NAME .)
    INTDEC          reduce using rule 40 (expression -> NAME .)
    FLOATDEC        reduce using rule 40 (expression -> NAME .)
    PRINT           reduce using rule 40 (expression -> NAME .)
    NAME            reduce using rule 40 (expression -> NAME .)
    $end            reduce using rule 40 (expression -> NAME .)
    }               reduce using rule 40 (expression -> NAME .)
    )               reduce using rule 40 (expression -> NAME .)


state 23

    (12) statement -> NAME = expression .
    (13) expression -> expression . + expression
    (14) expression -> expression . - expression
    (15) expression -> expression . * expression
    (16) expression -> expression . / expression
    (17) expression -> expression . ^ expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GT expression
    (20) expression -> expression . EQUAL expression
    (21) expression -> expression . NOTEQUAL expression
    (22) expression -> expression . GOEQUAL expression
    (23) expression -> expression . LOEQUAL expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression

    IF              reduce using rule 12 (statement -> NAME = expression .)
    BOOLEAN         reduce using rule 12 (statement -> NAME = expression .)
    STRING          reduce using rule 12 (statement -> NAME = expression .)
    INTDEC          reduce using rule 12 (statement -> NAME = expression .)
    FLOATDEC        reduce using rule 12 (statement -> NAME = expression .)
    PRINT           reduce using rule 12 (statement -> NAME = expression .)
    NAME            reduce using rule 12 (statement -> NAME = expression .)
    $end            reduce using rule 12 (statement -> NAME = expression .)
    }               reduce using rule 12 (statement -> NAME = expression .)
    +               shift and go to state 37
    -               shift and go to state 38
    *               shift and go to state 39
    /               shift and go to state 40
    ^               shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    EQUAL           shift and go to state 44
    NOTEQUAL        shift and go to state 45
    GOEQUAL         shift and go to state 46
    LOEQUAL         shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 24

    (34) expression -> - . expression
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    expression                     shift and go to state 50

state 25

    (35) expression -> ( . expression )
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    expression                     shift and go to state 51

state 26

    (36) expression -> INUMBER .

    +               reduce using rule 36 (expression -> INUMBER .)
    -               reduce using rule 36 (expression -> INUMBER .)
    *               reduce using rule 36 (expression -> INUMBER .)
    /               reduce using rule 36 (expression -> INUMBER .)
    ^               reduce using rule 36 (expression -> INUMBER .)
    LT              reduce using rule 36 (expression -> INUMBER .)
    GT              reduce using rule 36 (expression -> INUMBER .)
    EQUAL           reduce using rule 36 (expression -> INUMBER .)
    NOTEQUAL        reduce using rule 36 (expression -> INUMBER .)
    GOEQUAL         reduce using rule 36 (expression -> INUMBER .)
    LOEQUAL         reduce using rule 36 (expression -> INUMBER .)
    AND             reduce using rule 36 (expression -> INUMBER .)
    OR              reduce using rule 36 (expression -> INUMBER .)
    IF              reduce using rule 36 (expression -> INUMBER .)
    BOOLEAN         reduce using rule 36 (expression -> INUMBER .)
    STRING          reduce using rule 36 (expression -> INUMBER .)
    INTDEC          reduce using rule 36 (expression -> INUMBER .)
    FLOATDEC        reduce using rule 36 (expression -> INUMBER .)
    PRINT           reduce using rule 36 (expression -> INUMBER .)
    NAME            reduce using rule 36 (expression -> INUMBER .)
    $end            reduce using rule 36 (expression -> INUMBER .)
    }               reduce using rule 36 (expression -> INUMBER .)
    )               reduce using rule 36 (expression -> INUMBER .)


state 27

    (37) expression -> FNUMBER .

    +               reduce using rule 37 (expression -> FNUMBER .)
    -               reduce using rule 37 (expression -> FNUMBER .)
    *               reduce using rule 37 (expression -> FNUMBER .)
    /               reduce using rule 37 (expression -> FNUMBER .)
    ^               reduce using rule 37 (expression -> FNUMBER .)
    LT              reduce using rule 37 (expression -> FNUMBER .)
    GT              reduce using rule 37 (expression -> FNUMBER .)
    EQUAL           reduce using rule 37 (expression -> FNUMBER .)
    NOTEQUAL        reduce using rule 37 (expression -> FNUMBER .)
    GOEQUAL         reduce using rule 37 (expression -> FNUMBER .)
    LOEQUAL         reduce using rule 37 (expression -> FNUMBER .)
    AND             reduce using rule 37 (expression -> FNUMBER .)
    OR              reduce using rule 37 (expression -> FNUMBER .)
    IF              reduce using rule 37 (expression -> FNUMBER .)
    BOOLEAN         reduce using rule 37 (expression -> FNUMBER .)
    STRING          reduce using rule 37 (expression -> FNUMBER .)
    INTDEC          reduce using rule 37 (expression -> FNUMBER .)
    FLOATDEC        reduce using rule 37 (expression -> FNUMBER .)
    PRINT           reduce using rule 37 (expression -> FNUMBER .)
    NAME            reduce using rule 37 (expression -> FNUMBER .)
    $end            reduce using rule 37 (expression -> FNUMBER .)
    }               reduce using rule 37 (expression -> FNUMBER .)
    )               reduce using rule 37 (expression -> FNUMBER .)


state 28

    (38) expression -> BOOLEAN .

    +               reduce using rule 38 (expression -> BOOLEAN .)
    -               reduce using rule 38 (expression -> BOOLEAN .)
    *               reduce using rule 38 (expression -> BOOLEAN .)
    /               reduce using rule 38 (expression -> BOOLEAN .)
    ^               reduce using rule 38 (expression -> BOOLEAN .)
    LT              reduce using rule 38 (expression -> BOOLEAN .)
    GT              reduce using rule 38 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 38 (expression -> BOOLEAN .)
    NOTEQUAL        reduce using rule 38 (expression -> BOOLEAN .)
    GOEQUAL         reduce using rule 38 (expression -> BOOLEAN .)
    LOEQUAL         reduce using rule 38 (expression -> BOOLEAN .)
    AND             reduce using rule 38 (expression -> BOOLEAN .)
    OR              reduce using rule 38 (expression -> BOOLEAN .)
    IF              reduce using rule 38 (expression -> BOOLEAN .)
    BOOLEAN         reduce using rule 38 (expression -> BOOLEAN .)
    STRING          reduce using rule 38 (expression -> BOOLEAN .)
    INTDEC          reduce using rule 38 (expression -> BOOLEAN .)
    FLOATDEC        reduce using rule 38 (expression -> BOOLEAN .)
    PRINT           reduce using rule 38 (expression -> BOOLEAN .)
    NAME            reduce using rule 38 (expression -> BOOLEAN .)
    $end            reduce using rule 38 (expression -> BOOLEAN .)
    }               reduce using rule 38 (expression -> BOOLEAN .)
    )               reduce using rule 38 (expression -> BOOLEAN .)


state 29

    (39) expression -> STRING .

    +               reduce using rule 39 (expression -> STRING .)
    -               reduce using rule 39 (expression -> STRING .)
    *               reduce using rule 39 (expression -> STRING .)
    /               reduce using rule 39 (expression -> STRING .)
    ^               reduce using rule 39 (expression -> STRING .)
    LT              reduce using rule 39 (expression -> STRING .)
    GT              reduce using rule 39 (expression -> STRING .)
    EQUAL           reduce using rule 39 (expression -> STRING .)
    NOTEQUAL        reduce using rule 39 (expression -> STRING .)
    GOEQUAL         reduce using rule 39 (expression -> STRING .)
    LOEQUAL         reduce using rule 39 (expression -> STRING .)
    AND             reduce using rule 39 (expression -> STRING .)
    OR              reduce using rule 39 (expression -> STRING .)
    IF              reduce using rule 39 (expression -> STRING .)
    BOOLEAN         reduce using rule 39 (expression -> STRING .)
    STRING          reduce using rule 39 (expression -> STRING .)
    INTDEC          reduce using rule 39 (expression -> STRING .)
    FLOATDEC        reduce using rule 39 (expression -> STRING .)
    PRINT           reduce using rule 39 (expression -> STRING .)
    NAME            reduce using rule 39 (expression -> STRING .)
    $end            reduce using rule 39 (expression -> STRING .)
    }               reduce using rule 39 (expression -> STRING .)
    )               reduce using rule 39 (expression -> STRING .)


state 30

    (6) statement -> STRING NAME is_assign .

    IF              reduce using rule 6 (statement -> STRING NAME is_assign .)
    BOOLEAN         reduce using rule 6 (statement -> STRING NAME is_assign .)
    STRING          reduce using rule 6 (statement -> STRING NAME is_assign .)
    INTDEC          reduce using rule 6 (statement -> STRING NAME is_assign .)
    FLOATDEC        reduce using rule 6 (statement -> STRING NAME is_assign .)
    PRINT           reduce using rule 6 (statement -> STRING NAME is_assign .)
    NAME            reduce using rule 6 (statement -> STRING NAME is_assign .)
    $end            reduce using rule 6 (statement -> STRING NAME is_assign .)
    }               reduce using rule 6 (statement -> STRING NAME is_assign .)


state 31

    (7) statement -> INTDEC NAME is_assign .

    IF              reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    BOOLEAN         reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    STRING          reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    INTDEC          reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    FLOATDEC        reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    PRINT           reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    NAME            reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    $end            reduce using rule 7 (statement -> INTDEC NAME is_assign .)
    }               reduce using rule 7 (statement -> INTDEC NAME is_assign .)


state 32

    (8) statement -> FLOATDEC NAME is_assign .

    IF              reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    BOOLEAN         reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    STRING          reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    INTDEC          reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    FLOATDEC        reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    PRINT           reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    NAME            reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    $end            reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)
    }               reduce using rule 8 (statement -> FLOATDEC NAME is_assign .)


state 33

    (11) statement -> PRINT ( expression . )
    (13) expression -> expression . + expression
    (14) expression -> expression . - expression
    (15) expression -> expression . * expression
    (16) expression -> expression . / expression
    (17) expression -> expression . ^ expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GT expression
    (20) expression -> expression . EQUAL expression
    (21) expression -> expression . NOTEQUAL expression
    (22) expression -> expression . GOEQUAL expression
    (23) expression -> expression . LOEQUAL expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression

    )               shift and go to state 52
    +               shift and go to state 37
    -               shift and go to state 38
    *               shift and go to state 39
    /               shift and go to state 40
    ^               shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    EQUAL           shift and go to state 44
    NOTEQUAL        shift and go to state 45
    GOEQUAL         shift and go to state 46
    LOEQUAL         shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 34

    (41) conditional -> IF ( logic_expression . ) { s } elif else

    )               shift and go to state 53


state 35

    (26) logic_expression -> expression . LT expression
    (27) logic_expression -> expression . GT expression
    (28) logic_expression -> expression . EQUAL expression
    (29) logic_expression -> expression . NOTEQUAL expression
    (30) logic_expression -> expression . GOEQUAL expression
    (31) logic_expression -> expression . LOEQUAL expression
    (32) logic_expression -> expression . AND expression
    (33) logic_expression -> expression . OR expression
    (13) expression -> expression . + expression
    (14) expression -> expression . - expression
    (15) expression -> expression . * expression
    (16) expression -> expression . / expression
    (17) expression -> expression . ^ expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GT expression
    (20) expression -> expression . EQUAL expression
    (21) expression -> expression . NOTEQUAL expression
    (22) expression -> expression . GOEQUAL expression
    (23) expression -> expression . LOEQUAL expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression

    LT              shift and go to state 54
    GT              shift and go to state 55
    EQUAL           shift and go to state 56
    NOTEQUAL        shift and go to state 57
    GOEQUAL         shift and go to state 58
    LOEQUAL         shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61
    +               shift and go to state 37
    -               shift and go to state 38
    *               shift and go to state 39
    /               shift and go to state 40
    ^               shift and go to state 41


state 36

    (9) is_assign -> = expression .
    (13) expression -> expression . + expression
    (14) expression -> expression . - expression
    (15) expression -> expression . * expression
    (16) expression -> expression . / expression
    (17) expression -> expression . ^ expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GT expression
    (20) expression -> expression . EQUAL expression
    (21) expression -> expression . NOTEQUAL expression
    (22) expression -> expression . GOEQUAL expression
    (23) expression -> expression . LOEQUAL expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression

    IF              reduce using rule 9 (is_assign -> = expression .)
    BOOLEAN         reduce using rule 9 (is_assign -> = expression .)
    STRING          reduce using rule 9 (is_assign -> = expression .)
    INTDEC          reduce using rule 9 (is_assign -> = expression .)
    FLOATDEC        reduce using rule 9 (is_assign -> = expression .)
    PRINT           reduce using rule 9 (is_assign -> = expression .)
    NAME            reduce using rule 9 (is_assign -> = expression .)
    $end            reduce using rule 9 (is_assign -> = expression .)
    }               reduce using rule 9 (is_assign -> = expression .)
    +               shift and go to state 37
    -               shift and go to state 38
    *               shift and go to state 39
    /               shift and go to state 40
    ^               shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    EQUAL           shift and go to state 44
    NOTEQUAL        shift and go to state 45
    GOEQUAL         shift and go to state 46
    LOEQUAL         shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 37

    (13) expression -> expression + . expression
    (13) expression -> . expression + expression
    (14) expression -> . expression - expression
    (15) expression -> . expression * expression
    (16) expression -> . expression / expression
    (17) expression -> . expression ^ expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GT expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOTEQUAL expression
    (22) expression -> . expression GOEQUAL expression
    (23) expression -> . expression LOEQUAL expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (34) expression -> . - expression
    (35) expression -> . ( expression )
    (36) expression -> . INUMBER
    (37) expression -> . FNUMBER
    (38) expression -> . BOOLEAN
    (39) expression -> . STRING
    (40) expression -> . NAME

    -               shift and go to state 24
    (               shift and go to state 25
    INUMBER         shift and go to state 26
    FNUMBER         shift and go to state 27
    BOOLEAN         shift and go to state 28
    STRING          shift and go to state 29
    NAME            shift and go to state 22

    expression                     shift and go to state 62

state 38
